--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="css/app.css"/>
 <!-- endbuild -->
 
-<script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
+<script src="https://maps.googleapis.com/maps/api/js"></script>
 
 <!-- build:js js/app.js -->
 <!-- bower:js -->
@@ -33,7 +33,7 @@
 
 <script src="lib/angular-fcsa-number/src/fcsaNumber.js"></script>
 <script src="lib/http-auth-interceptor.js"></script>
-<script src="lib/OpenLayers.light.js"></script>
+<script src="lib/OpenLayers.min.js"></script>
 
 <!-- Application Scripts -->
 <script src="js/app.js"></script>
