updated fonts link

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 
 <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"> -->
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400, 600&subset=latin-ext,latin' rel='stylesheet' type='text/css'>
+<link href="fonts.googleapis.com/css?family=Open+Sans:300,400, 600&subset=latin-ext,latin' rel='stylesheet' type='text/css'>
 <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 
 <!-- build:css(.tmp) css/app.css -->
